--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     #head { top: 0; }
     #eyes { top: 5%; }
     #nose { top: 20%; }
-    #mouth { top: 40%; }
+    #mouth { top: 30%; }
 
     .controls {
       display: flex;
@@ -201,6 +201,6 @@
       });
     }
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+  <script src="https://unpkg.com/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </body>
 </html>
