--- a/index.html
+++ b/index.html
@@ -60,9 +60,11 @@
 
     .side-right {
   position: absolute;
-  right: 10px;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 18%;
+  left: calc(100% + 10px);
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
       display: flex;
       flex-direction: column;
       align-items: center;
