--- a/index.html
+++ b/index.html
@@ -10,89 +10,95 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      width: 100%;
       background: linear-gradient(135deg, #2f2c2c, #5a3d3d, #205142);
       font-family: "STKaiti", serif;
       display: flex;
       flex-direction: column;
+      justify-content: flex-start;
       align-items: center;
-      overflow-x: hidden;
+      overflow: hidden;
       color: #e3e3dc;
     }
-
-    .title {
-      text-align: center;
-      margin: 20px 0 10px;
-    }
-
-    .title h1 {
-      font-size: 2.4em;
+    h1 {
+      font-size: 3.2em;
       color: #f8eac9;
-      margin: 0;
+      margin: 20px 0 0;
+      letter-spacing: 0.1em;
+      opacity: 0;
+      animation: fadeInSlide 1.6s ease forwards;
+    }
+    h2 {
+      font-size: 1.2em;
+      color: #f0d9a1;
+      margin: 0 0 20px;
+      font-weight: normal;
+      opacity: 0;
+      animation: fadeInSlide 1.6s ease forwards;
+      animation-delay: 0.4s;
     }
 
-    .title h2 {
-      font-size: 1em;
-      color: #e6d8ab;
-      font-weight: normal;
-      margin: 4px 0 0;
-      letter-spacing: 0.1em;
+    @keyframes fadeInSlide {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .container {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 75%;
+      padding: 0 30px;
+      box-sizing: border-box;
     }
 
     #mask-container {
       position: relative;
-      width: 60vw;
-      height: 60vw;
-      max-width: 90vw;
-      margin: 10px auto;
+      width: 55vw;
+      height: 55vw;
+      max-height: 70vh;
     }
 
     .mask-part {
       position: absolute;
       left: 0;
       width: 100%;
+      opacity: 1;
+      transition: opacity 0.4s ease;
     }
-
     #head { top: 0; }
     #eyes { top: 5%; }
     #nose { top: 20%; }
-    #mouth { top: 30%; }
+    #mouth { top: 40%; }
 
-    .side-right {
-  position: absolute;
-  top: 18%;
-  left: calc(100% + 10px);
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
+    .controls {
       display: flex;
       flex-direction: column;
-      align-items: center;
-      margin-top: 20px;
-      gap: 12px;
+      gap: 15px;
+      margin-left: 30px;
     }
 
-    .side-right img {
-      width: 80px;
+    .controls img {
+      width: 100px;
       cursor: pointer;
       transition: transform 0.2s ease;
     }
 
-    .side-right img:hover {
+    .controls img:hover {
       transform: scale(1.05);
     }
 
     .functions {
       display: flex;
       justify-content: center;
-      gap: 14px;
-      margin-top: 20px;
-      z-index: 1000;
+      gap: 18px;
+      margin-top: 15px;
     }
 
     .functions button {
       padding: 10px 16px;
-      font-size: 14px;
+      font-size: 15px;
       background: #333;
       color: #d3f3e6;
       border: 1px solid #66a98c;
@@ -101,34 +107,37 @@
       font-family: "STKaiti", serif;
     }
 
+    .functions button:hover {
+      background: #222;
+    }
+
     .description {
-      width: 90%;
+      margin-top: 15px;
+      max-width: 75vw;
       text-align: center;
-      font-size: 12px;
-      margin: 20px auto 10px;
-      color: #ccc6b8;
+      font-size: 14px;
       line-height: 1.6em;
+      color: #ddd8cc;
     }
   </style>
 </head>
 <body>
-  <div class="title">
-    <h1>傩面观容</h1>
-    <h2>NUO MIAN GUAN RONG</h2>
-  </div>
+  <h1>傩面观容</h1>
+  <h2>GONG ZUN DI MU</h2>
 
-  <div id="mask-container">
-    <img id="head" class="mask-part" src="assets/head5.png" />
-    <img id="eyes" class="mask-part" src="assets/eyes5.png" />
-    <img id="nose" class="mask-part" src="assets/nose5.png" />
-    <img id="mouth" class="mask-part" src="assets/mouth5.png" />
-  </div>
-
-  <div class="side-right">
-    <img src="assets/btn_head.png" onclick="switchPart('head')" alt="冠首" />
-    <img src="assets/btn_eyes.png" onclick="switchPart('eyes')" alt="眉眼" />
-    <img src="assets/btn_nose.png" onclick="switchPart('nose')" alt="观鼻" />
-    <img src="assets/btn_mouth.png" onclick="switchPart('mouth')" alt="纳口" />
+  <div class="container">
+    <div id="mask-container">
+      <img id="head" class="mask-part" src="assets/head1.png" />
+      <img id="eyes" class="mask-part" src="assets/eyes1.png" />
+      <img id="nose" class="mask-part" src="assets/nose1.png" />
+      <img id="mouth" class="mask-part" src="assets/mouth1.png" />
+    </div>
+    <div class="controls">
+      <img src="assets/btn_head.png" onclick="switchPart('head')" alt="冠首" />
+      <img src="assets/btn_eyes.png" onclick="switchPart('eyes')" alt="眉眼" />
+      <img src="assets/btn_nose.png" onclick="switchPart('nose')" alt="观鼻" />
+      <img src="assets/btn_mouth.png" onclick="switchPart('mouth')" alt="纳口" />
+    </div>
   </div>
 
   <div class="functions">
@@ -138,8 +147,9 @@
   </div>
 
   <div class="description">
-    傩面观容：传统与面貌的对话<br/>
-    NUO MIAN GUAN RONG: A Dialogue Between Tradition and Face — 本互动装置呈现贵州傩面具的眉眼鼻口组合之美，邀请你参与“观容”之礼。
+    傩面观容：传统与面貌的对话<br />
+    GONG ZUN DI MU: A Dialogue Between Tradition and Face<br />
+    本互动装置呈现贵州傩面具的眉眼鼻口组合之美，邀请你参与“观容”之礼。
   </div>
 
   <script>
@@ -149,16 +159,24 @@
       nose: Array.from({length: 50}, (_, i) => `assets/nose${i + 1}.png`),
       mouth: Array.from({length: 50}, (_, i) => `assets/mouth${i + 1}.png`)
     };
+
     const indexes = {
-      head: 4,
-      eyes: 4,
-      nose: 4,
-      mouth: 4
+      head: 0,
+      eyes: 0,
+      nose: 0,
+      mouth: 0
     };
+
     function switchPart(part) {
-      indexes[part] = (indexes[part] + 1) % parts[part].length;
-      document.getElementById(part).src = parts[part][indexes[part]];
+      const el = document.getElementById(part);
+      el.style.opacity = 0;
+      setTimeout(() => {
+        indexes[part] = (indexes[part] + 1) % parts[part].length;
+        el.src = parts[part][indexes[part]];
+        el.style.opacity = 1;
+      }, 200);
     }
+
     function randomizeParts() {
       for (const part in parts) {
         const i = Math.floor(Math.random() * parts[part].length);
@@ -166,13 +184,14 @@
         document.getElementById(part).src = parts[part][i];
       }
     }
+
     function resetParts() {
-      const init = { head: 4, eyes: 4, nose: 4, mouth: 4 };
       for (const part in parts) {
-        indexes[part] = init[part];
-        document.getElementById(part).src = parts[part][init[part]];
+        indexes[part] = 0;
+        document.getElementById(part).src = parts[part][0];
       }
     }
+
     function downloadImage() {
       html2canvas(document.getElementById("mask-container")).then(canvas => {
         const link = document.createElement("a");
@@ -182,6 +201,6 @@
       });
     }
   </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </body>
 </html>
